# rust_config_checker

./: Cargo.toml  README.md  expanded.rs
example/: Cargo.toml  config1.yaml  config2.yaml
example/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
