[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
config-checker = { path = "../"}
config-checker-macros  ={ path = "../macros"}
serde_derive = "^1.0"
serde = { version = "^1.0", features = ["derive"] }

[dependencies.confy]
version = "^0.5"
features = ["yaml_conf"]
default-features = false

